--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "homepage": "https://trancore.github.io/",
   "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    ".storybook/scripts"
+  ],
   "scripts": {
     "start": "BROWSER=none craco start",
     "build": "craco build",
@@ -15,7 +18,8 @@
     "predeploy": "yarn run build",
     "codegen": "graphql-codegen --config codegen.ts",
     "build-storybook": "storybook build",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "auto-create-storybook": "node --loader esbuild-register/loader -r esbuild-register .storybook/scripts/autoCreateStorybook.ts"
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -75,6 +79,7 @@
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "ts-loader": "^9.4.4",
+    "ts-morph": "^19.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.2"
